<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Programs" Id="{1d7e22d7-5577-4dde-a98e-416112e79629}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// ================= Tool Types ====================================
	quarterInchUpcut : Tool_Type := (speed := 18000, toolNumber := 2, modelname := 'Dimar', name := 'Quarter Inch Upcut');
	halfInchUpcut : Tool_Type := (speed := 18000, toolNumber := 4, modelname := 'Dimar', name := 'Half Inch Upcut');
	sawblade : Tool_Type := (speed := 10000, toolNumber := 0, modelname := 'Hunter Precision Tools', name := 'Sawblade');
	dovetail : Tool_Type := (speed := 18000, toolNumber := 5, modelname := 'Dimar', name := 'Dovetail');
	halfInchBall : Tool_Type := (speed := 18000, toolNumber := 6, modelname := 'Dimar', name := 'Half Inch Ball');
//	quarterInchBall : Tool_Type := (speed := 18000, toolNumber := 7, modelname := 'Dimar', name := 'Quarter Inch Ball');
	noTool : Tool_Type := (speed := 0, toolNumber := 7, modelname := 'Dimar', name := 'None');

	// ================= Programs ====================================
	//Update C:\Users\kris\OneDrive\Documents\Robot transfer\Robot Programs\BX130XControlCode\BX130XControlCode\BX130XPLC\POUs\FB_Machine.TcPOU
	FrontWall : Program_Type := (index := 0, option1true := 'E cut', option1false := 'No E cut', option2true := 'Glass Door', option2false := 'Wood Door', option3true := 'Lock', option3false := 'No Lock', programName := 'Front Wall', firstTool := quarterInchUpcut);
	BackWall : Program_Type := (index := 1, option1true := 'STD Window', option1false := 'No Window', option2true := 'Chimney Cut', option2false := 'No Chimney', option3true := '', option3false := '', programName := 'Back Wall', firstTool := halfInchUpcut);	
	Option3 : Program_Type := (index := 2, option1true := '', option1false := '', option2true := '', option2false := '', option3true := '', option3false := '', programName := 'Option3', firstTool := quarterInchUpcut);
	Option4 : Program_Type := (index := 3, option1true := '', option1false := '', option2true := '', option2false := '', option3true := '', option3false := '', programName := 'Option4', firstTool := quarterInchUpcut);
	ToolChange : Program_Type := (index := 10, option1true := '', option1false := '', option2true := '', option2false := '', option3true := '', option3false := '', programName := 'ToolChange', firstTool := quarterInchUpcut);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>