<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Machine" Id="{3f2b54bd-7836-4066-a761-fd73c9f3b9ef}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Machine //Control program
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	robotPose 		: Structure_RobotPose;
	// =============== Machine Modules ================================================
	fbRobot					: FB_Robot;					// Robot object
	fbSpindle				: FB_Spindle;				// Spindle Object. Includes spindle speed, tool changing control
	fbGantry				: FB_GantryHoldDown;		// Gantry hold down object. Includes servo control, pneumatic clamping control, robot following
	fbEnclosure				: FB_Enclosure;				// Enclosure control. Includes table clamping, dust collection monitoring, door control
	
	// ============== Errors ==========================================================
	pneumaticsOK	: BOOL;								// True if cylinders in assigned position and pressure ok.
	bErrors			: BOOL;								// True if modules have errors or E stop.								
	
	// =============== State machine ================================================
	eSystemState			: E_MachineState := E_MachineState.INITIALIZATION;  // Current state 
	eSystemStateRequested 	: E_MachineState;									// Requested state
	
	// =============== HMI buttons and states ========================================
	// initialize.content buttons
	bHMIHomeRobot			: BOOL; //
	rTrigHomeRobot			: R_TRIG; //
	bHMIHomeMotors			: BOOL; //
	rTrigHomeMotors			: R_TRIG; //
	bHMICloseDoor			: BOOL; //
	rTrigCloseDoor			: R_TRIG; //
	fTrigOpenDoor			: F_TRIG; //
	bHMILockTables			: BOOL; //
	rTrigLockTables			: R_TRIG; //
	fTrigUnlockTables		: F_TRIG; //
	bHMILowerRaiseRollers	: BOOL; //
	rTrigRaiseRollers		: R_TRIG; //
	fTrigLowerRollers		: F_TRIG; //
	bHMIWarmupSpindle		: BOOL; //
	rTrigWarmupSpindle		: R_TRIG; //
	fTrigStopSpindle		: F_TRIG; //
	
	fTrigInProgramRunning 		: F_TRIG; //Trigger for when robot finishes program
//	isCalledHomeMotors	: BOOL := FALSE;
	
	// initialize.content indicators
	sHMIMotorsHomed			: BOOL; //Todo: Change colour/text when activated
	sHMIDoorClosed			: BOOL; //Todo: Change colour/text when activated
	sHMITablesLocked		: BOOL; //Todo: Change colour/text when activated
	sHMIRollersRaised		: BOOL; //Todo: Change colour/text when activated
	sDustCollectionOn		: BOOL;
	
	// selectProgram.content inputs
	programWallChoice	: USINT; // 1 for front wall, 2 for back wall, 3-16 for additional options
	programOption1		: BOOL; //Front wall: True: E cut, False, no e cut Back wall: True: STDWindow, False, no window
	programOption2		: BOOL; //Front wall: True: glass door, False, wood door Back wall: True: Chimney cut, False, no chimney cut
	programOption3		: BOOL; //Front wall: True: Door lock, false, no lock Back wall: NA
	bHMIRunProgramScreen		: BOOL; 
	rTrigRunProgramScreen		: R_TRIG; //
	//=============Programs====================
	FrontWall : Program_Type := (index := 0, option1true := 'E cut', option1false := 'No E cut', option2true := 'Glass Door', option2false := 'Wood Door', option3true := 'Lock', option3false := 'No Lock', programName := 'Front Wall', firstTool := fbSpindle.quarterInchUpcut);
	BackWall : Program_Type := (index := 1, option1true := 'STD Window', option1false := 'No Window', option2true := 'Chimney Cut', option2false := 'No Chimney', option3true := '', option3false := '', programName := 'Back Wall', firstTool := fbSpindle.quarterInchUpcut);	
	Option3 : Program_Type := (index := 2, option1true := '', option1false := '', option2true := '', option2false := '', option3true := '', option3false := '', programName := 'Option3', firstTool := fbSpindle.quarterInchUpcut);
	Option4 : Program_Type := (index := 3, option1true := '', option1false := '', option2true := '', option2false := '', option3true := '', option3false := '', programName := 'Option4', firstTool := fbSpindle.quarterInchUpcut);
	selectedProgram : Program_Type;
	
	// run.content buttons
	bHMIStart				: BOOL; // Button to start program. Called from Run.content
	rTrigStartProgram		: R_TRIG; //
	fTrigStopProgram		: F_TRIG; //
	bHMIHold				: BOOL; // Button to hold program. Called from Run.content
	rTrigHoldRobot			: R_TRIG; //
	fTrigRunRobot			: F_TRIG; //
	bHMILoadTool			: BOOL; // Button to activate tool load pushbutton. Called from Run.content
	rTrigLoadTool			: R_TRIG; //
	bHMIToolLoaded			: BOOL; // Button to confirm tool is loaded. Called from Run.content
	rTrigToolLoaded			: R_TRIG; //
	bActivateRollers		: BOOL; // Button to make rollers follow robot. Called from Run.content
//	rTrigActivateRollers	: R_TRIG; //
//	fTrigDeActivateRollers	: F_TRIG;
	bHMIReset				: BOOL;	// Button to reset program. TODO: make
	bHMIManual				: BOOL; // Button to switch state into manual mode. TODO: make
	
	// run.content indicators
	sHMIPneumaticsOK		: BOOL; // Indicator light of pneumatic pressure, called from run.content
	sHMIRobotHomed			: BOOL; // Indicator light of robot homed, called from run.content. Todo: Change colour/text when activated
	sHMIRollersActivated	: BOOL; // Indicator light of rollers activated, called from run.content
	sHMIeStopsOff			: BOOL; // Indicator light of e stops off, called from run.content
	sHMIDustCollectionOn	: BOOL;
	sProgramString			: STRING;
	
	// Error states
	eInitializeServos : Structure_Error;

//	startUp: BOOL; // for operating run, first actions upon starting program
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Call of actions

	// Init
	
	//HMI update
	// Update each HMI indicator
	sHMIRobotHomed := fbRobot.inRobotAtHome;
	sHMIRollersActivated := bActivateRollers AND GVL_Axes.AxisWest.Status.Homed;
	sDustCollectionOn := fbEnclosure.dustCollectionOn;
	sHMIPneumaticsOK := fbGantry.Check_Pneumatics();
	sHMIeStopsOff := NOT fbRobot.inRobotError;
	
	// Mode and state requests
	Change_State();  // Changes state based on inputs
	State_Machine(); // Calls functions based on state
	fbSpindle.Drive_Status();
	
	// Update robot IOs
	fbRobot();
	robotPose := fbRobot.Update_Pose();
	fbGantry();
	fbEnclosure();
	fbSpindle();
	
	// Output variables
	
	// HMI button triggers
	rTrigHomeRobot(CLK := bHMIHomeRobot);
	rTrigHomeMotors(CLK := bHMIHomeMotors);
	rTrigCloseDoor(CLK := bHMICloseDoor);
	rTrigLockTables(CLK := bHMILockTables);
	rTrigRaiseRollers(CLK := bHMILowerRaiseRollers);
	rTrigWarmupSpindle(CLK := bHMIWarmupSpindle);
	rTrigRunProgramScreen(CLK := bHMIRunProgramScreen);
	rTrigStartProgram(CLK := bHMIStart);
	rTrigHoldRobot(CLK := bHMIHold);
	rTrigLoadTool(CLK := bHMILoadTool);
	rTrigToolLoaded(CLK := bHMIToolLoaded);
//	rTrigActivateRollers(CLK := bActivateRollers);
	
	
	fTrigOpenDoor(CLK := bHMICloseDoor);
	fTrigUnlockTables(CLK := bHMILockTables);
	fTrigLowerRollers(CLK := bHMILowerRaiseRollers);
	fTrigStopSpindle(CLK := bHMIWarmupSpindle);
	fTrigInProgramRunning(CLK := fbRobot.inProgramRunning);
	fTrigStopProgram(CLK := bHMIStart);
	fTrigRunRobot(CLK := bHMIHold);
//	fTrigDeActivateRollers(CLK := bActivateRollers);
	
]]></ST>
    </Implementation>
    <Folder Name="StateMachine" Id="{b4b3eed7-4e15-4350-a74a-294b50706019}" />
    <Method Name="Change_State" Id="{11427209-76ae-4b9c-9f30-0498e05b4968}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Change_State
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Error_Handling" Id="{270383da-a173-4601-b310-46f8333dc847}">
      <Declaration><![CDATA[METHOD Error_Handling
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_Error" Id="{34eb4b26-0b5c-454b-a500-c33be7205698}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_Error
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_Hold" Id="{d9f86694-1d0b-4add-8c20-fb8a5acf1092}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_Hold
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_Initialization" Id="{a0909845-20b7-4f19-88c6-a128d86fcc8b}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_Initialization
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbEnclosure.Table_Clamp_Control_Pushbutton();

//Pushbuttons
IF rTrigHomeRobot.Q THEN
	fbRobot.Home_Robot(); //Done, tested
END_IF

IF rTrigHomeMotors.Q THEN
	eInitializeServos := fbGantry.Home_Servos(robotPose := fbRobot.robotPose); //Done, tested
END_IF

//Toggle buttons
IF rTrigCloseDoor.Q THEN
	fbEnclosure.Rolling_Door_HMI_Operation(doorCommand := FALSE); //Done, tested no door
END_IF

IF fTrigOpenDoor.Q THEN
	fbEnclosure.Rolling_Door_HMI_Operation(doorCommand := TRUE); //Done, tested no door
END_IF

IF rTrigLockTables.Q THEN
	fbEnclosure.Table_Clamp_Control_HMI(eastTableLock := TRUE, westTableLock := TRUE); //Done, tested
END_IF

IF fTrigUnlockTables.Q THEN
	fbEnclosure.Table_Clamp_Control_HMI(eastTableLock := FALSE, westTableLock := FALSE); //Done, tested
END_IF

IF rTrigRaiseRollers.Q THEN
	fbGantry.Lower_Raise_Rollers(raiseRollers := TRUE); //Done, tested
END_IF

IF fTrigLowerRollers.Q THEN
	fbGantry.Lower_Raise_Rollers(raiseRollers := FALSE); //Done, tested
END_IF

IF rTrigWarmupSpindle.Q THEN
	fbSpindle.Spindle_Warmup(); //Done, tested. TODO: Change spindle is warm flag if spindle hasn't been on for >3 hours, make sure sawblade isn't present
END_IF

IF fTrigStopSpindle.Q THEN
	fbSpindle.Stop_Spindle(); //Done, tested
END_IF

IF rTrigRunProgramScreen.Q THEN
	fbRobot.Program_Select(programChoice := programWallChoice, option1 := programOption1, option2 := programOption2, option3 := programOption3);
	Update_Program_String();
	bHMIRunProgramScreen := FALSE;
END_IF

IF bActivateRollers AND GVL_Axes.AxisWest.Status.Homed THEN
	fbGantry.Follow_Robot(robotPoseGantry := robotPose);
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_ManualMove" Id="{e062f620-36f2-4ef0-9468-9f06db1c52fd}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_ManualMove
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_Reset" Id="{409ce780-c7de-4e8c-a0bb-25edc8e53879}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_Reset
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Operating_Run" Id="{39f52282-3ce5-4d02-b41e-113893603b81}" FolderPath="StateMachine\">
      <Declaration><![CDATA[METHOD Operating_Run
VAR
	robotHold : BOOL;
	toolNumber: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Startup
IF rTrigStartProgram.Q THEN
	fbRobot.Program_Select(programChoice := programWallChoice, option1 := programOption1, option2 := programOption2, option3 := programOption3);
	fbSpindle.Start_Spindle(spindleSpeed := fbSpindle.currentTool.speed);
	fbRobot.Start_Robot();
END_IF

// Follow and hold
robotHold := fbGantry.Follow_Robot(robotPoseGantry := fbRobot.robotPose);
fbRobot.RunHold_Robot(RunHold := NOT robotHold);

//Tool change logic
fbRobot.Tool_Change(currentTool := fbSpindle.currentTool);

IF fbRobot.inRobotToolNumberRequest <> fbSpindle.currentTool.toolNumber THEN
	IF fbRobot.inRobotReleaseTool THEN
		fbSpindle.Stop_Spindle();
	END_IF
	IF fbSpindle.spindleIsStopped THEN
		fbSpindle.Manual_Tool_Change(changeToolEnable := TRUE);
	END_IF
	IF bHMIToolLoaded THEN
		fbSpindle.Update_Current_Tool(toolNumber := fbRobot.inRobotToolNumberRequest);
		fbSpindle.Start_Spindle(spindleSpeed := fbSpindle.currentTool.speed);
	END_IF
END_IF

IF fTrigInProgramRunning.Q THEN
	startUp := TRUE;
	//quit run mode
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="State_Machine" Id="{f466ced8-b935-49bf-a90d-d8b2d5bdc64e}" FolderPath="StateMachine\">
      <Declaration><![CDATA[// Calls functions based on state
METHOD State_Machine 
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE eSystemState OF
	E_MachineState.INITIALIZATION:
		Operating_Initialization();
	
	E_MachineState.MANUALMOVE:
		Operating_ManualMove();
		
	E_MachineState.RUN:
		Operating_Run();
		
	E_MachineState.RESET:
		Operating_Reset();
		
	E_MachineState.ERROR:
		Operating_Error();
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="Update_Program_String" Id="{65642f34-04a0-419f-b222-9cff5bf3d802}">
      <Declaration><![CDATA[METHOD Update_Program_String
VAR
	option1string			: STRING;
	option2string			: STRING;
	option3string			: STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE programWallChoice OF
        1: selectedProgram := FrontWall;
        2: selectedProgram := BackWall;
        3: selectedProgram := Option3;
        4: selectedProgram := Option4;
        // Add more cases for additional options if needed
        ELSE
            // Handle invalid program wall choice
    END_CASE;

IF programOption1 THEN
	option1string := selectedProgram.option1true;
ELSE
	option1string := selectedProgram.option1false;
END_IF

IF programOption2 THEN
	option2string := selectedProgram.option2true;
ELSE
	option2string := selectedProgram.option2false;
END_IF

IF programOption3 THEN
	option3string := selectedProgram.option3true;
ELSE
	option3string := selectedProgram.option3false;
END_IF

sProgramString := CONCAT(CONCAT(CONCAT(CONCAT(CONCAT(CONCAT(selectedProgram.programName,' - '), option1string),' - '),option2string),' - '), option3string);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Machine">
      <LineId Id="108" Count="1" />
      <LineId Id="602" Count="1" />
      <LineId Id="605" Count="4" />
      <LineId Id="110" Count="0" />
      <LineId Id="610" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="370" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="550" Count="0" />
      <LineId Id="188" Count="1" />
      <LineId Id="150" Count="0" />
      <LineId Id="572" Count="0" />
      <LineId Id="464" Count="1" />
      <LineId Id="463" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="346" Count="5" />
      <LineId Id="127" Count="0" />
      <LineId Id="468" Count="0" />
      <LineId Id="585" Count="2" />
      <LineId Id="590" Count="1" />
      <LineId Id="589" Count="0" />
      <LineId Id="352" Count="0" />
      <LineId Id="356" Count="2" />
      <LineId Id="353" Count="0" />
      <LineId Id="561" Count="0" />
      <LineId Id="594" Count="2" />
      <LineId Id="593" Count="0" />
      <LineId Id="377" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Change_State">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Error_Handling">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_Error">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_Hold">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_Initialization">
      <LineId Id="91" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="19" Count="2" />
      <LineId Id="18" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="23" Count="2" />
      <LineId Id="22" Count="0" />
      <LineId Id="59" Count="2" />
      <LineId Id="58" Count="0" />
      <LineId Id="27" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="64" Count="2" />
      <LineId Id="63" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="68" Count="2" />
      <LineId Id="67" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="34" Count="0" />
      <LineId Id="72" Count="2" />
      <LineId Id="71" Count="0" />
      <LineId Id="81" Count="2" />
      <LineId Id="90" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="96" Count="2" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_ManualMove">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_Reset">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Operating_Run">
      <LineId Id="39" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="43" Count="4" />
      <LineId Id="49" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="59" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.State_Machine">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="12" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_Machine.Update_Program_String">
      <LineId Id="21" Count="7" />
      <LineId Id="5" Count="0" />
      <LineId Id="29" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="40" Count="4" />
      <LineId Id="39" Count="0" />
      <LineId Id="46" Count="4" />
      <LineId Id="45" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="35" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>